--- a/index.html
+++ b/index.html
@@ -1,95 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard Layout</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dashboard Layout</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body class="bg-gray-100">
+    <!-- Container utama -->
+    <div class="flex flex-col h-screen">
+      <!-- Topbar -->
+      <header
+        class="flex items-center justify-between bg-white shadow px-6 py-3"
+      >
+        <span class="font-bold text-lg">Tertib SMK</span>
 
-  <!-- Container utama -->
-  <div class="flex flex-col h-screen">
-
-    <!-- Topbar -->
-    <header class="flex items-center justify-between bg-white shadow px-4 py-3">
-      <span class="font-bold text-lg">My Dashboard</span>
-
-      <!-- Search hanya muncul di desktop -->
-      <div class="hidden md:block w-1/3">
-        <input 
-          type="text" 
-          placeholder="Search..." 
-          class="w-full px-3 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring focus:ring-blue-300"
-        />
-      </div>
-
-      <!-- Profile -->
-      <div class="flex items-center gap-3">
-        <span class="hidden md:block font-medium">Hello, Mamman</span>
-        <img src="https://via.placeholder.com/32" alt="Profile" class="w-8 h-8 rounded-full border">
-      </div>
-    </header>
-
-    <!-- Content -->
-    <div class="flex flex-1 overflow-hidden">
-
-      <!-- Sidebar kiri (hanya desktop) -->
-      <aside class="hidden md:block bg-white w-64 p-4 border-r overflow-y-auto">
-        <nav class="space-y-2">
-          <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200">🏠 Dashboard</a>
-          <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200">📦 Products</a>
-          <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200">👥 Users</a>
-          <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200">⚙️ Settings</a>
-        </nav>
-      </aside>
-
-      <!-- Main content -->
-      <main class="flex-1 overflow-y-auto p-6">
-        <h1 class="text-2xl font-bold mb-4">Main Content</h1>
-        <p class="text-gray-600">Ini adalah isi konten utama. Layout ini responsif untuk desktop dan HP.</p>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
-          <div class="bg-white p-4 rounded shadow">Card 1</div>
-          <div class="bg-white p-4 rounded shadow">Card 2</div>
-          <div class="bg-white p-4 rounded shadow">Card 3</div>
-          <div class="bg-white p-4 rounded shadow">Card 4</div>
+        <div class="hidden md:block w-1/2">
+          <span class="font-bold text-lg">Beranda</span>
         </div>
-      </main>
 
-      <!-- Sidebar kanan (hanya desktop besar) -->
-      <aside class="hidden lg:block w-64 bg-white border-l p-4 overflow-y-auto">
-        <h2 class="font-semibold mb-3">Sidebar Kanan</h2>
-        <ul class="space-y-2 text-gray-600">
-          <li>Notifikasi</li>
-          <li>Statistik</li>
-          <li>Update</li>
-        </ul>
-      </aside>
+        <!-- Profile -->
+        <div class="flex items-center gap-3">
+          <span class="hidden md:block font-medium">Hello, Maman</span>
+          <img
+            src="https://via.placeholder.com/32"
+            alt="Profile"
+            class="w-8 h-8 rounded-full border"
+          />
+        </div>
+      </header>
 
+      <!-- Content -->
+      <div class="flex flex-1 overflow-hidden">
+        <!-- Sidebar kiri (hanya desktop) -->
+        <aside
+          class="hidden md:block bg-white w-64 p-4 border-r overflow-y-auto"
+        >
+          <nav class="space-y-2">
+            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"
+              ><i class="bi bi-house-fill"></i> Beranda</a
+            >
+            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"
+              ><i class="bi bi-bookmark-fill"></i> Riwayat</a
+            >
+            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"
+              ><i class="bi bi-bar-chart-fill"></i> Peringkat</a
+            >
+            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"
+              ><i class="bi bi-journal-bookmark-fill"></i> Tata Tertib</a
+            >
+            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"
+              ><i class="bi bi-person-fill"></i> Saya</a
+            >
+          </nav>
+        </aside>
+
+        <!-- Main content -->
+        <main class="flex-1 overflow-y-auto p-6 space-y-6">
+          <!-- Postingan 1 -->
+          <div class="bg-white rounded-lg shadow">
+            <!-- Header -->
+            <div class="flex items-center px-4 py-3 border-b">
+              <img
+                src="https://i.pravatar.cc/40?img=3"
+                alt="user"
+                class="w-10 h-10 rounded-full"
+              />
+              <div class="ml-3">
+                <p class="font-semibold">Maman RPL</p>
+                <p class="text-xs text-gray-500">Jurusan RPL</p>
+              </div>
+            </div>
+            <!-- Gambar -->
+            <img
+              src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+              alt="post"
+              class="w-full"
+            />
+            <!-- Action -->
+            <div class="flex items-center justify-between px-4 py-2 border-t">
+              <div class="flex items-center gap-4">
+                <button
+                  class="flex items-center gap-1 text-gray-600 hover:text-red-500 transition"
+                >
+                  <i class="bi bi-heart text-lg"></i>
+                  <span class="text-sm">Like</span>
+                </button>
+                <button
+                  class="flex items-center gap-1 text-gray-600 hover:text-blue-500 transition"
+                >
+                  <i class="bi bi-share text-lg"></i>
+                  <span class="text-sm">Share</span>
+                </button>
+              </div>
+            </div>
+            <!-- Caption -->
+            <div class="px-4 pb-4">
+              <p class="text-sm mt-2">
+                <span class="font-semibold">Maman</span> Lagi latihan coding
+                buat project sekolah 💻🔥
+              </p>
+            </div>
+          </div>
+
+          <!-- Postingan 2 -->
+          <div class="bg-white rounded-lg shadow">
+            <div class="flex items-center px-4 py-3 border-b">
+              <img
+                src="https://i.pravatar.cc/40?img=5"
+                alt="user"
+                class="w-10 h-10 rounded-full"
+              />
+              <div class="ml-3">
+                <p class="font-semibold">Dinda MM</p>
+                <p class="text-xs text-gray-500">Jurusan Multimedia</p>
+              </div>
+            </div>
+            <img
+              src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+              alt="post"
+              class="w-full"
+            />
+            <div class="flex items-center justify-between px-4 py-2 border-t">
+              <div class="flex items-center gap-4">
+                <button
+                  class="flex items-center gap-1 text-gray-600 hover:text-red-500 transition"
+                >
+                  <i class="bi bi-heart text-lg"></i>
+                  <span class="text-sm">Like</span>
+                </button>
+                <button
+                  class="flex items-center gap-1 text-gray-600 hover:text-blue-500 transition"
+                >
+                  <i class="bi bi-share text-lg"></i>
+                  <span class="text-sm">Share</span>
+                </button>
+              </div>
+            </div>
+            <div class="px-4 pb-4">
+              <p class="text-sm mt-2">
+                <span class="font-semibold">Dinda</span> Lagi bikin desain
+                grafis untuk lomba 🎨✨
+              </p>
+            </div>
+          </div>
+        </main>
+
+        <!-- Sidebar kanan -->
+        <aside
+          class="hidden lg:block w-72 bg-white border-l p-3 overflow-y-auto"
+        >
+          <h2 class="font-semibold text-sm mb-3">
+            Peringkat Pelanggaran Per Jurusan
+          </h2>
+
+          <!-- Kategori -->
+          <div class="space-y-3">
+            <!-- Poin Positif -->
+            <div>
+              <h3 class="text-gray-700 font-semibold text-sm mb-2">
+                Poin Positif
+              </h3>
+              <div class="space-y-2">
+                <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
+                  <img
+                    src="smk.png"
+                    alt="avatar"
+                    class="w-8 h-8 rounded-full"
+                  />
+                  <p class="ml-2 text-sm flex-1">Andi</p>
+                  <span class="text-green-600 font-semibold text-xs">50</span>
+                </div>
+                <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
+                  <img
+                    src="smk.png"
+                    alt="avatar"
+                    class="w-8 h-8 rounded-full"
+                  />
+                  <p class="ml-2 text-sm flex-1">Dinda</p>
+                  <span class="text-green-600 font-semibold text-xs">42</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Poin Negatif -->
+            <div>
+              <h3 class="text-gray-700 font-semibold text-sm mb-2">
+                Poin Negatif
+              </h3>
+              <div class="space-y-2">
+                <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
+                  <img
+                    src="smk.png"
+                    alt="avatar"
+                    class="w-8 h-8 rounded-full"
+                  />
+                  <p class="ml-2 text-sm flex-1">Rizky</p>
+                  <span class="text-red-600 font-semibold text-xs">30</span>
+                </div>
+                <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
+                  <img
+                    src="smk.png"
+                    alt="avatar"
+                    class="w-8 h-8 rounded-full"
+                  />
+                  <p class="ml-2 text-sm flex-1">Siti</p>
+                  <span class="text-red-600 font-semibold text-xs">25</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
+      </div>
     </div>
-  </div>
 
-  <!-- Bottom Navigation (hanya mobile) -->
-  <nav class="md:hidden fixed bottom-0 left-0 right-0 bg-white border-t shadow-lg">
-    <div class="flex justify-around py-2">
-      <a href="#" class="flex flex-col items-center text-blue-600">
-        <span>🏠</span>
-        <span class="text-xs">Home</span>
-      </a>
-      <a href="#" class="flex flex-col items-center text-gray-600">
-        <span>📦</span>
-        <span class="text-xs">Products</span>
-      </a>
-      <a href="#" class="flex flex-col items-center text-gray-600">
-        <span>👥</span>
-        <span class="text-xs">Users</span>
-      </a>
-      <a href="#" class="flex flex-col items-center text-gray-600">
-        <span>⚙️</span>
-        <span class="text-xs">Settings</span>
-      </a>
-    </div>
-  </nav>
-
-</body>
+    <!-- Bottom Navigation (hanya mobile) -->
+    <nav
+      class="md:hidden fixed bottom-0 left-0 right-0 bg-white border-t shadow-lg"
+    >
+      <div class="flex justify-around py-2">
+        <a href="#" class="flex flex-col items-center text-blue-600">
+          <span>🏠</span>
+          <span class="text-xs">Home</span>
+        </a>
+        <a href="#" class="flex flex-col items-center text-gray-600">
+          <span>📦</span>
+          <span class="text-xs">Products</span>
+        </a>
+        <a href="#" class="flex flex-col items-center text-gray-600">
+          <span>👥</span>
+          <span class="text-xs">Users</span>
+        </a>
+        <a href="#" class="flex flex-col items-center text-gray-600">
+          <span>⚙️</span>
+          <span class="text-xs">Settings</span>
+        </a>
+      </div>
+    </nav>
+  </body>
 </html>
