--- a/index.html
+++ b/index.html
@@ -11,203 +11,118 @@
     />
   </head>
   <body class="bg-gray-100">
-    <!-- Container utama -->
     <div class="flex flex-col h-screen">
       <!-- Topbar -->
-      <header
-        class="flex items-center justify-between bg-white shadow px-6 py-3"
-      >
+      <header class="flex items-center justify-between bg-white shadow px-6 py-3">
         <span class="font-bold text-lg">Tertib SMK</span>
-
         <div class="hidden md:block w-1/2">
           <span class="font-bold text-lg">Beranda</span>
         </div>
-
-        <!-- Profile -->
         <div class="flex items-center gap-3">
           <span class="hidden md:block font-medium">Hello, Maman</span>
-          <img
-            src="https://via.placeholder.com/32"
-            alt="Profile"
-            class="w-8 h-8 rounded-full border"
-          />
+          <img src="https://via.placeholder.com/32" alt="Profile" class="w-8 h-8 rounded-full border"/>
         </div>
       </header>
 
       <!-- Content -->
       <div class="flex flex-1 overflow-hidden">
-        <!-- Sidebar kiri (hanya desktop) -->
-        <aside
-          class="hidden md:block bg-white w-64 p-4 border-r overflow-y-auto"
-        >
+        <!-- Sidebar kiri -->
+        <aside class="hidden md:block bg-white w-64 p-4 border-r overflow-y-auto">
           <nav class="space-y-2">
-            <a href="/" class="block px-3 py-2 rounded hover:bg-gray-200"
-              ><i class="bi bi-house-fill"></i> Beranda</a
-            >
-            <a href="riwayat.html" class="block px-3 py-2 rounded hover:bg-gray-200"
-              ><i class="bi bi-bookmark-fill"></i> Riwayat</a
-            >
-            <a href="peringkat.html" class="block px-3 py-2 rounded hover:bg-gray-200"
-              ><i class="bi bi-bar-chart-fill"></i> Peringkat</a
-            >
-            <a href="tatatertib.html" class="block px-3 py-2 rounded hover:bg-gray-200"
-              ><i class="bi bi-journal-bookmark-fill"></i> Tata Tertib</a
-            >
-            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"
-              ><i class="bi bi-person-fill"></i> Saya</a
-            >
+            <a href="/" class="block px-3 py-2 rounded hover:bg-gray-200"><i class="bi bi-house-fill"></i> Beranda</a>
+            <a href="riwayat.html" class="block px-3 py-2 rounded hover:bg-gray-200"><i class="bi bi-bookmark-fill"></i> Riwayat</a>
+            <a href="peringkat.html" class="block px-3 py-2 rounded hover:bg-gray-200"><i class="bi bi-bar-chart-fill"></i> Peringkat</a>
+            <a href="tatatertib.html" class="block px-3 py-2 rounded hover:bg-gray-200"><i class="bi bi-journal-bookmark-fill"></i> Tata Tertib</a>
+            <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200"><i class="bi bi-person-fill"></i> Saya</a>
           </nav>
         </aside>
 
         <!-- Main content -->
-        <main class="flex-1 overflow-y-auto p-6 space-y-6">
+        <main id="mainContent" class="flex-1 overflow-y-auto p-6 space-y-6 relative">
           <!-- Postingan 1 -->
           <div class="bg-white rounded-lg shadow">
-            <!-- Header -->
             <div class="flex items-center px-4 py-3 border-b">
-              <img
-                src="https://i.pravatar.cc/40?img=3"
-                alt="user"
-                class="w-10 h-10 rounded-full"
-              />
+              <img src="https://i.pravatar.cc/40?img=3" alt="user" class="w-10 h-10 rounded-full"/>
               <div class="ml-3">
                 <p class="font-semibold">Maman RPL</p>
                 <p class="text-xs text-gray-500">Jurusan RPL</p>
               </div>
             </div>
-            <!-- Gambar -->
-            <img
-              src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-              alt="post"
-              class="w-full"
-            />
-            <!-- Action -->
+            <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="post" class="w-full"/>
             <div class="flex items-center justify-between px-4 py-2 border-t">
               <div class="flex items-center gap-4">
-                <button
-                  class="flex items-center gap-1 text-gray-600 hover:text-red-500 transition"
-                >
+                <button class="flex items-center gap-1 text-gray-600 hover:text-red-500 transition">
                   <i class="bi bi-heart text-lg"></i>
                   <span class="text-sm">Like</span>
                 </button>
-                <button
-                  class="flex items-center gap-1 text-gray-600 hover:text-blue-500 transition"
-                >
+                <button class="flex items-center gap-1 text-gray-600 hover:text-blue-500 transition">
                   <i class="bi bi-share text-lg"></i>
                   <span class="text-sm">Share</span>
                 </button>
               </div>
             </div>
-            <!-- Caption -->
             <div class="px-4 pb-4">
-              <p class="text-sm mt-2">
-                <span class="font-semibold">Maman</span> Lagi latihan coding
-                buat project sekolah 💻🔥
-              </p>
+              <p class="text-sm mt-2"><span class="font-semibold">Maman</span> Lagi latihan coding buat project sekolah 💻🔥</p>
             </div>
           </div>
 
           <!-- Postingan 2 -->
           <div class="bg-white rounded-lg shadow">
             <div class="flex items-center px-4 py-3 border-b">
-              <img
-                src="https://i.pravatar.cc/40?img=5"
-                alt="user"
-                class="w-10 h-10 rounded-full"
-              />
+              <img src="https://i.pravatar.cc/40?img=5" alt="user" class="w-10 h-10 rounded-full"/>
               <div class="ml-3">
                 <p class="font-semibold">Dinda MM</p>
                 <p class="text-xs text-gray-500">Jurusan Multimedia</p>
               </div>
             </div>
-            <img
-              src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-              alt="post"
-              class="w-full"
-            />
+            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="post" class="w-full"/>
             <div class="flex items-center justify-between px-4 py-2 border-t">
               <div class="flex items-center gap-4">
-                <button
-                  class="flex items-center gap-1 text-gray-600 hover:text-red-500 transition"
-                >
+                <button class="flex items-center gap-1 text-gray-600 hover:text-red-500 transition">
                   <i class="bi bi-heart text-lg"></i>
                   <span class="text-sm">Like</span>
                 </button>
-                <button
-                  class="flex items-center gap-1 text-gray-600 hover:text-blue-500 transition"
-                >
+                <button class="flex items-center gap-1 text-gray-600 hover:text-blue-500 transition">
                   <i class="bi bi-share text-lg"></i>
                   <span class="text-sm">Share</span>
                 </button>
               </div>
             </div>
             <div class="px-4 pb-4">
-              <p class="text-sm mt-2">
-                <span class="font-semibold">Dinda</span> Lagi bikin desain
-                grafis untuk lomba 🎨✨
-              </p>
+              <p class="text-sm mt-2"><span class="font-semibold">Dinda</span> Lagi bikin desain grafis untuk lomba 🎨✨</p>
             </div>
           </div>
         </main>
 
         <!-- Sidebar kanan -->
-        <aside
-          class="hidden lg:block w-72 bg-white border-l p-3 overflow-y-auto"
-        >
-          <h2 class="font-semibold text-sm mb-3">
-            Peringkat Pelanggaran Per Jurusan
-          </h2>
-
-          <!-- Kategori -->
+        <aside class="hidden lg:block w-72 bg-white border-l p-3 overflow-y-auto">
+          <h2 class="font-semibold text-sm mb-3">Peringkat Pelanggaran Per Jurusan</h2>
           <div class="space-y-3">
-            <!-- Poin Positif -->
             <div>
-              <h3 class="text-gray-700 font-semibold text-sm mb-2">
-                Poin Positif
-              </h3>
+              <h3 class="text-gray-700 font-semibold text-sm mb-2">Poin Positif</h3>
               <div class="space-y-2">
                 <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
-                  <img
-                    src="smk.png"
-                    alt="avatar"
-                    class="w-8 h-8 rounded-full"
-                  />
+                  <img src="smk.png" alt="avatar" class="w-8 h-8 rounded-full"/>
                   <p class="ml-2 text-sm flex-1">Andi</p>
                   <span class="text-green-600 font-semibold text-xs">50</span>
                 </div>
                 <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
-                  <img
-                    src="smk.png"
-                    alt="avatar"
-                    class="w-8 h-8 rounded-full"
-                  />
+                  <img src="smk.png" alt="avatar" class="w-8 h-8 rounded-full"/>
                   <p class="ml-2 text-sm flex-1">Dinda</p>
                   <span class="text-green-600 font-semibold text-xs">42</span>
                 </div>
               </div>
             </div>
-
-            <!-- Poin Negatif -->
             <div>
-              <h3 class="text-gray-700 font-semibold text-sm mb-2">
-                Poin Negatif
-              </h3>
+              <h3 class="text-gray-700 font-semibold text-sm mb-2">Poin Negatif</h3>
               <div class="space-y-2">
                 <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
-                  <img
-                    src="smk.png"
-                    alt="avatar"
-                    class="w-8 h-8 rounded-full"
-                  />
+                  <img src="smk.png" alt="avatar" class="w-8 h-8 rounded-full"/>
                   <p class="ml-2 text-sm flex-1">Rizky</p>
                   <span class="text-red-600 font-semibold text-xs">30</span>
                 </div>
                 <div class="flex items-center bg-gray-50 p-2 rounded shadow-sm">
-                  <img
-                    src="smk.png"
-                    alt="avatar"
-                    class="w-8 h-8 rounded-full"
-                  />
+                  <img src="smk.png" alt="avatar" class="w-8 h-8 rounded-full"/>
                   <p class="ml-2 text-sm flex-1">Siti</p>
                   <span class="text-red-600 font-semibold text-xs">25</span>
                 </div>
@@ -218,55 +133,37 @@
       </div>
     </div>
 
-    <!-- Bottom Navigation (hanya mobile) -->
-    <!-- Bottom Bar (HP) -->
-    <nav
-      class="fixed bottom-0 left-0 w-full bg-white border-t shadow-inner flex justify-around items-center py-2 lg:hidden z-50"
-    >
-      <!-- Beranda -->
-      <a
-        href="#"
-        class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-      >
-        <i class="bi bi-house-fill text-xl"></i>
-        <span class="text-xs">Beranda</span>
-      </a>
-
-      <!-- Riwayat -->
-      <a
-        href="#"
-        class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-      >
-        <i class="bi bi-bookmark-fill text-xl"></i>
-        <span class="text-xs">Riwayat</span>
-      </a>
-
-      <!-- Peringkat -->
-      <a
-        href="#"
-        class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-      >
-        <i class="bi bi-bar-chart-fill text-xl"></i>
-        <span class="text-xs">Peringkat</span>
-      </a>
-
-      <!-- Tata Tertib -->
-      <a
-        href="#"
-        class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-      >
-        <i class="bi bi-journal-bookmark-fill text-xl"></i>
-        <span class="text-xs">Tata Tertib</span>
-      </a>
-
-      <!-- Saya -->
-      <a
-        href="#"
-        class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-      >
-        <i class="bi bi-person-fill text-xl"></i>
-        <span class="text-xs">Saya</span>
-      </a>
+    <!-- Bottom Navigation (mobile) -->
+    <nav class="fixed bottom-0 left-0 w-full bg-white border-t shadow-inner flex justify-around items-center py-2 lg:hidden z-50">
+      <a href="#" class="flex flex-col items-center text-gray-600 hover:text-blue-600"><i class="bi bi-house-fill text-xl"></i><span class="text-xs">Beranda</span></a>
+      <a href="#" class="flex flex-col items-center text-gray-600 hover:text-blue-600"><i class="bi bi-bookmark-fill text-xl"></i><span class="text-xs">Riwayat</span></a>
+      <a href="#" class="flex flex-col items-center text-gray-600 hover:text-blue-600"><i class="bi bi-bar-chart-fill text-xl"></i><span class="text-xs">Peringkat</span></a>
+      <a href="#" class="flex flex-col items-center text-gray-600 hover:text-blue-600"><i class="bi bi-journal-bookmark-fill text-xl"></i><span class="text-xs">Tata Tertib</span></a>
+      <a href="#" class="flex flex-col items-center text-gray-600 hover:text-blue-600"><i class="bi bi-person-fill text-xl"></i><span class="text-xs">Saya</span></a>
     </nav>
+
+    <!-- Tombol scroll-to-top di pojok kanan bawah layar -->
+    <button id="scrollTopBtn" class="hidden fixed bottom-4 right-4 p-3 rounded-full bg-blue-600 text-white shadow-lg hover:bg-blue-700 transition z-50">
+      <i class="bi bi-arrow-up"></i>
+    </button>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const main = document.getElementById("mainContent");
+        const scrollBtn = document.getElementById("scrollTopBtn");
+
+        main.addEventListener("scroll", () => {
+          if (main.scrollTop > 200) {
+            scrollBtn.classList.remove("hidden");
+          } else {
+            scrollBtn.classList.add("hidden");
+          }
+        });
+
+        scrollBtn.addEventListener("click", () => {
+          main.scrollTo({ top: 0, behavior: "smooth" });
+        });
+      });
+    </script>
   </body>
 </html>
