--- a/tata-tertib.html
+++ b/tata-tertib.html
@@ -74,178 +74,161 @@
         <main class="flex-1 overflow-y-auto p-6 space-y-4">
           <!-- Header + Filter -->
           <div class="flex items-center justify-between mb-4">
-            <h2 class="text-xl font-semibold">Peringkat Siswa</h2>
-            <div class="flex gap-2">
-              <button
-                class="px-3 py-1 text-sm rounded bg-green-100 text-green-700 hover:bg-green-200 transition"
-              >
-                Positif
-              </button>
-              <button
-                class="px-3 py-1 text-sm rounded bg-red-100 text-red-700 hover:bg-red-200 transition"
-              >
-                Negatif
-              </button>
+            <h2 class="text-xl font-bold">Tata tertib Siswa</h2>
+          </div>
+
+          <div class="bagian">
+            <h1 class="font-bold mt-6 mb-4">Pendahuluan</h1>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">Kata Pengantar</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">Visi & Misi</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">Mars SMKN 1 Pusakanagara</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">Yel Yel</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">Contoh Potongan Rambut</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">Contoh Seragam & Atribut</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
             </div>
           </div>
 
-          <!-- Siswa 1 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=11"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Andi</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
+          <div class="bagian">
+            <h1 class="font-bold mt-6 mb-4">Tata Tertib & Sanksi</h1>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">BAB I</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
             </div>
-            <span class="text-green-600 font-bold">75 Poin</span>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">BAB II</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">BAB III</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">BAB IV</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+
+            <div class="flex items-center bg-white p-3 rounded-lg shadow mt-2">
+              <div class="ml-3 flex-1">
+                <p class="font-medium">BAB V</p>
+                <p class="text-xs text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime dolor ipsam dolorem?
+                </p>
+              </div>
+              <span class="text-bold text-xl"
+                ><a href="#"><i class="bi bi-chevron-right"></i></a
+              ></span>
+            </div>
+ 
           </div>
 
-          <!-- Siswa 2 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=16"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Rizky</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-red-600 font-bold">30 Poin</span>
-          </div>
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=11"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Andi</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-green-600 font-bold">75 Poin</span>
-          </div>
-
-          <!-- Siswa 2 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=16"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Rizky</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-red-600 font-bold">30 Poin</span>
-          </div>
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=11"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Andi</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-green-600 font-bold">75 Poin</span>
-          </div>
-
-          <!-- Siswa 2 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=16"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Rizky</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-red-600 font-bold">30 Poin</span>
-          </div>
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=11"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Andi</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-green-600 font-bold">75 Poin</span>
-          </div>
-
-          <!-- Siswa 2 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=16"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Rizky</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-red-600 font-bold">30 Poin</span>
-          </div>
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=11"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Andi</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-green-600 font-bold">75 Poin</span>
-          </div>
-
-          <!-- Siswa 2 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=16"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Rizky</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-red-600 font-bold">30 Poin</span>
-          </div>
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=11"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Andi</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-green-600 font-bold">75 Poin</span>
-          </div>
-
-          <!-- Siswa 2 -->
-          <div class="flex items-center bg-white p-3 rounded-lg shadow">
-            <img
-              src="https://i.pravatar.cc/50?img=16"
-              alt="siswa"
-              class="w-12 h-12 rounded-full"
-            />
-            <div class="ml-3 flex-1">
-              <p class="font-medium">Rizky</p>
-              <p class="text-xs text-gray-500">X-B Rekayasa Perangkat Lunak</p>
-            </div>
-            <span class="text-red-600 font-bold">30 Poin</span>
-          </div>
         </main>
 
         <!-- Sidebar kanan -->
