buttom bar link

--- a/index.html
+++ b/index.html
@@ -222,36 +222,50 @@
     <nav
       class="fixed bottom-0 left-0 w-full bg-white border-t shadow-inner flex justify-around items-center py-2 lg:hidden z-50"
     >
+      <!-- Beranda -->
       <a
-        href="#"
+        href="index.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-        ><i class="bi bi-house-fill text-xl"></i
-        ><span class="text-xs">Beranda</span></a
       >
+        <i class="bi bi-house-fill text-xl"></i>
+        <span class="text-xs">Beranda</span>
+      </a>
+
+      <!-- Riwayat -->
       <a
-        href="#"
+        href="riwayat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-        ><i class="bi bi-bookmark-fill text-xl"></i
-        ><span class="text-xs">Riwayat</span></a
       >
+        <i class="bi bi-bookmark-fill text-xl"></i>
+        <span class="text-xs">Riwayat</span>
+      </a>
+
+      <!-- Peringkat -->
       <a
-        href="#"
+        href="peringkat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-        ><i class="bi bi-bar-chart-fill text-xl"></i
-        ><span class="text-xs">Peringkat</span></a
       >
+        <i class="bi bi-bar-chart-fill text-xl"></i>
+        <span class="text-xs">Peringkat</span>
+      </a>
+
+      <!-- Tata Tertib -->
       <a
-        href="#"
+        href="tata-tertib.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-        ><i class="bi bi-journal-bookmark-fill text-xl"></i
-        ><span class="text-xs">Tata Tertib</span></a
       >
+        <i class="bi bi-journal-bookmark-fill text-xl"></i>
+        <span class="text-xs">Tata Tertib</span>
+      </a>
+
+      <!-- Saya -->
       <a
-        href="#"
+        href="saya.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
-        ><i class="bi bi-person-fill text-xl"></i
-        ><span class="text-xs">Saya</span></a
       >
+        <i class="bi bi-person-fill text-xl"></i>
+        <span class="text-xs">Saya</span>
+      </a>
     </nav>
 
     <!-- Tombol scroll-to-top di pojok kanan bawah layar -->
