--- a/riwayat.html
+++ b/riwayat.html
@@ -41,19 +41,29 @@
           class="hidden md:block bg-white w-64 p-4 border-r overflow-y-auto"
         >
           <nav class="space-y-2">
-            <a href="index.html" class="block px-3 py-2 rounded hover:bg-gray-200"
+            <a
+              href="index.html"
+              class="block px-3 py-2 rounded hover:bg-gray-200"
               ><i class="bi bi-house-fill"></i> Beranda</a
             >
-            <a href="riwayat.html" class="block px-3 py-2 rounded hover:bg-gray-200"
+            <a
+              href="riwayat.html"
+              class="block px-3 py-2 rounded hover:bg-gray-200"
               ><i class="bi bi-bookmark-fill"></i> Riwayat</a
             >
-            <a href="peringkat.html" class="block px-3 py-2 rounded hover:bg-gray-200"
+            <a
+              href="peringkat.html"
+              class="block px-3 py-2 rounded hover:bg-gray-200"
               ><i class="bi bi-bar-chart-fill"></i> Peringkat</a
             >
-            <a href="tata-tertib.html" class="block px-3 py-2 rounded hover:bg-gray-200"
+            <a
+              href="tata-tertib.html"
+              class="block px-3 py-2 rounded hover:bg-gray-200"
               ><i class="bi bi-journal-bookmark-fill"></i> Tata Tertib</a
             >
-            <a href="saya.html" class="block px-3 py-2 rounded hover:bg-gray-200"
+            <a
+              href="saya.html"
+              class="block px-3 py-2 rounded hover:bg-gray-200"
               ><i class="bi bi-person-fill"></i> Saya</a
             >
           </nav>
@@ -106,7 +116,7 @@
             </div>
             <span class="text-red-600 font-bold">30 Poin</span>
           </div>
-          
+
           <div class="flex items-center bg-white p-3 rounded-lg shadow">
             <img
               src="https://i.pravatar.cc/50?img=11"
@@ -313,7 +323,7 @@
     >
       <!-- Beranda -->
       <a
-        href="#"
+        href="index.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-house-fill text-xl"></i>
@@ -322,7 +332,7 @@
 
       <!-- Riwayat -->
       <a
-        href="#"
+        href="riwayat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-bookmark-fill text-xl"></i>
@@ -331,7 +341,7 @@
 
       <!-- Peringkat -->
       <a
-        href="#"
+        href="peringkat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-bar-chart-fill text-xl"></i>
@@ -340,7 +350,7 @@
 
       <!-- Tata Tertib -->
       <a
-        href="#"
+        href="tata-tertib.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-journal-bookmark-fill text-xl"></i>
@@ -349,7 +359,7 @@
 
       <!-- Saya -->
       <a
-        href="#"
+        href="saya.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-person-fill text-xl"></i>
