--- a/peringkat.html
+++ b/peringkat.html
@@ -322,7 +322,7 @@
     >
       <!-- Beranda -->
       <a
-        href="#"
+        href="index.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-house-fill text-xl"></i>
@@ -331,7 +331,7 @@
 
       <!-- Riwayat -->
       <a
-        href="#"
+        href="riwayat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-bookmark-fill text-xl"></i>
@@ -340,7 +340,7 @@
 
       <!-- Peringkat -->
       <a
-        href="#"
+        href="peringkat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-bar-chart-fill text-xl"></i>
@@ -349,7 +349,7 @@
 
       <!-- Tata Tertib -->
       <a
-        href="#"
+        href="tata-tertib.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-journal-bookmark-fill text-xl"></i>
@@ -358,7 +358,7 @@
 
       <!-- Saya -->
       <a
-        href="#"
+        href="saya.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-person-fill text-xl"></i>
