--- a/tata-tertib.html
+++ b/tata-tertib.html
@@ -226,9 +226,7 @@
                 ><a href="#"><i class="bi bi-chevron-right"></i></a
               ></span>
             </div>
- 
           </div>
-
         </main>
 
         <!-- Sidebar kanan -->
@@ -305,7 +303,7 @@
     >
       <!-- Beranda -->
       <a
-        href="#"
+        href="index.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-house-fill text-xl"></i>
@@ -314,7 +312,7 @@
 
       <!-- Riwayat -->
       <a
-        href="#"
+        href="riwayat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-bookmark-fill text-xl"></i>
@@ -323,7 +321,7 @@
 
       <!-- Peringkat -->
       <a
-        href="#"
+        href="peringkat.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-bar-chart-fill text-xl"></i>
@@ -332,7 +330,7 @@
 
       <!-- Tata Tertib -->
       <a
-        href="#"
+        href="tata-tertib.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-journal-bookmark-fill text-xl"></i>
@@ -341,7 +339,7 @@
 
       <!-- Saya -->
       <a
-        href="#"
+        href="saya.html"
         class="flex flex-col items-center text-gray-600 hover:text-blue-600"
       >
         <i class="bi bi-person-fill text-xl"></i>
