--- a/laporkan-siswa.html
+++ b/laporkan-siswa.html
@@ -20,7 +20,7 @@
         <span class="font-bold text-lg">Tertib SMK</span>
 
         <div class="hidden md:block w-1/2">
-          <span class="font-bold text-lg">Profil </span>
+          <span class="font-bold text-lg">Peringkat </span>
         </div>
 
         <!-- Profile -->
@@ -71,7 +71,7 @@
 
         <!-- Main content -->
         <main
-          class="flex-1 overflow-y-auto p-6 space-y-4 pb-48 relative"
+          class="flex-1 overflow-y-auto p-6 space-y-4 relative"
           id="mainContent"
         >
           <!-- Header -->
@@ -122,7 +122,7 @@
           <div class="mt-6 space-y-3">
             <!-- Laporkan Siswa -->
             <a
-              href="#"
+              href="laporkan-siswa.html"
               class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-3">
@@ -168,14 +168,7 @@
               <i class="bi bi-chevron-right text-gray-400"></i>
             </a>
           </div>
-
-          <!-- Tombol scroll-to-top kanan bawah -->
-          <button
-            id="scrollTopBtn"
-            class="hidden fixed bottom-4 right-4 p-3 rounded-full bg-blue-600 text-white shadow-lg hover:bg-blue-700 transition z-50"
-          >
-            <i class="bi bi-arrow-up"></i>
-          </button>
+ 
         </main>
 
         <!-- Sidebar kanan -->
