laporkan siswa done

--- a/riwayat.html
+++ b/riwayat.html
@@ -71,7 +71,7 @@
 
         <!-- Main content -->
         <!-- List Siswa -->
-        <main class="flex-1 overflow-y-auto p-6 space-y-4">
+        <main class="flex-1 overflow-y-auto p-6 space-y-4 pb-48">
           <!-- Header + Filter -->
           <div class="flex items-center justify-between mb-4">
             <h2 class="text-xl font-semibold">Poin Anda</h2>
@@ -195,6 +195,7 @@
             </div>
             <span class="text-red-600 font-bold">30 Poin</span>
           </div>
+
           <div class="flex items-center bg-white p-3 rounded-lg shadow">
             <img
               src="https://i.pravatar.cc/50?img=11"
