--- a/saya.html
+++ b/saya.html
@@ -122,7 +122,7 @@
           <div class="mt-6 space-y-3">
             <!-- Laporkan Siswa -->
             <a
-              href="#"
+              href="laporkan-siswa.html"
               class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-3">
@@ -134,7 +134,7 @@
 
             <!-- Riwayat Poin -->
             <a
-              href="#"
+              href="riwayat.html"
               class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-3">
@@ -150,7 +150,7 @@
               class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-3">
-                <i class="bi bi-gift text-xl text-yellow-500"></i>
+                <i class="bi bi bi-arrow-repeat text-xl text-yellow-500"></i>
                 <span class="font-medium">Tukar Poin</span>
               </div>
               <i class="bi bi-chevron-right text-gray-400"></i>
@@ -167,15 +167,7 @@
               </div>
               <i class="bi bi-chevron-right text-gray-400"></i>
             </a>
-          </div>
-
-          <!-- Tombol scroll-to-top kanan bawah -->
-          <button
-            id="scrollTopBtn"
-            class="hidden fixed bottom-4 right-4 p-3 rounded-full bg-blue-600 text-white shadow-lg hover:bg-blue-700 transition z-50"
-          >
-            <i class="bi bi-arrow-up"></i>
-          </button>
+          </div> 
         </main>
 
         <!-- Sidebar kanan -->
