--- a/tata-tertib.html
+++ b/tata-tertib.html
@@ -71,7 +71,7 @@
 
         <!-- Main content -->
         <!-- List Siswa -->
-        <main class="flex-1 overflow-y-auto p-6 space-y-4">
+        <main class="flex-1 overflow-y-auto p-6 space-y-4 pb-48">
           <!-- Header + Filter -->
           <div class="flex items-center justify-between mb-4">
             <h2 class="text-xl font-bold">Tata tertib Siswa</h2>
