--- a/laporkan-siswa.html
+++ b/laporkan-siswa.html
@@ -71,104 +71,158 @@
 
         <!-- Main content -->
         <main
-          class="flex-1 overflow-y-auto p-6 space-y-4 relative"
+          class="flex-1 overflow-y-auto p-6 space-y-4 relative pb-48"
           id="mainContent"
         >
           <!-- Header -->
           <div class="flex items-center justify-between mb-4">
-            <h2 class="text-xl font-bold">Profil Saya</h2>
+            <h2 class="text-xl font-bold">Laporkan Siswa</h2>
           </div>
 
-          <!-- Cards -->
-          <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-            <!-- Poin Positif -->
-            <div
-              class="bg-white p-4 rounded-lg shadow flex flex-col items-center"
-            >
-              <i class="bi bi-hand-thumbs-up text-2xl text-green-500"></i>
-              <p class="mt-2 font-semibold text-lg">50</p>
-              <p class="text-sm text-gray-500">Poin Positif</p>
+          <!-- Form Laporkan Siswa -->
+          <form class="space-y-6 bg-white p-6 rounded-lg shadow">
+            <!-- Pilih Siswa -->
+            <div>
+              <label
+                for="siswa"
+                class="block text-sm font-medium text-gray-700 mb-1"
+                >Pilih Siswa</label
+              >
+              <input
+                list="siswaList"
+                id="siswa"
+                name="siswa"
+                placeholder="Ketik nama siswa..."
+                class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              />
+              <datalist id="siswaList">
+                <option value="Maman RPL"></option>
+                <option value="Dinda MM"></option>
+                <option value="Andi"></option>
+                <option value="Siti"></option>
+              </datalist>
             </div>
 
-            <!-- Poin Negatif -->
-            <div
-              class="bg-white p-4 rounded-lg shadow flex flex-col items-center"
-            >
-              <i class="bi bi-hand-thumbs-down text-2xl text-red-500"></i>
-              <p class="mt-2 font-semibold text-lg">30</p>
-              <p class="text-sm text-gray-500">Poin Negatif</p>
+            <!-- Pilih Pelanggaran -->
+            <div>
+              <label
+                for="pelanggaran"
+                class="block text-sm font-medium text-gray-700 mb-1"
+                >Pilih Pelanggaran</label
+              >
+              <input
+                list="pelanggaranList"
+                id="pelanggaran"
+                name="pelanggaran"
+                placeholder="Ketik jenis pelanggaran..."
+                class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              />
+              <datalist id="pelanggaranList">
+                <option value="Terlambat masuk kelas"></option>
+                <option value="Tidak memakai seragam"></option>
+                <option value="Mengganggu teman"></option>
+                <option value="Tidak mengerjakan tugas"></option>
+              </datalist>
             </div>
 
-            <!-- Sisa Toleransi -->
-            <div
-              class="bg-white p-4 rounded-lg shadow flex flex-col items-center"
-            >
-              <i class="bi bi-shield-check text-2xl text-yellow-500"></i>
-              <p class="mt-2 font-semibold text-lg">20</p>
-              <p class="text-sm text-gray-500">Sisa Toleransi</p>
+            <!-- Radio Button Ya/Tidak -->
+            <div>
+              <p class="text-sm font-medium text-gray-700 mb-1">
+                Tampil di beranda?
+              </p>
+              <div class="flex items-center gap-4">
+                <label class="flex items-center gap-2 cursor-pointer">
+                  <input
+                    type="radio"
+                    name="beranda"
+                    value="ya"
+                    class="w-5 h-5 appearance-none border border-gray-400 rounded-md checked:bg-blue-600"
+                  />
+                  <span class="select-none">Ya</span>
+                </label>
+                <label class="flex items-center gap-2 cursor-pointer">
+                  <input
+                    type="radio"
+                    name="beranda"
+                    value="tidak"
+                    class="w-5 h-5 appearance-none border border-gray-400 rounded-md checked:bg-blue-600"
+                  />
+                  <span class="select-none">Tidak</span>
+                </label>
+              </div>
             </div>
 
-            <!-- Jumlah Laporan -->
-            <div
-              class="bg-white p-4 rounded-lg shadow flex flex-col items-center"
-            >
-              <i class="bi bi-file-earmark-text text-2xl text-blue-500"></i>
-              <p class="mt-2 font-semibold text-lg">5</p>
-              <p class="text-sm text-gray-500">Jumlah Laporan</p>
+            <div>
+              <p class="text-sm font-medium text-gray-700 mb-1">Toleransi?</p>
+              <div class="flex items-center gap-4">
+                <label class="flex items-center gap-2 cursor-pointer">
+                  <input
+                    type="radio"
+                    name="toleransi"
+                    value="ya"
+                    class="w-5 h-5 appearance-none border border-gray-400 rounded-md checked:bg-blue-600"
+                  />
+                  <span class="select-none">Ya</span>
+                </label>
+                <label class="flex items-center gap-2 cursor-pointer">
+                  <input
+                    type="radio"
+                    name="toleransi"
+                    value="tidak"
+                    class="w-5 h-5 appearance-none border border-gray-400 rounded-md checked:bg-blue-600"
+                  />
+                  <span class="select-none">Tidak</span>
+                </label>
+              </div>
             </div>
-          </div>
 
-          <!-- Menu Bawah -->
-          <div class="mt-6 space-y-3">
-            <!-- Laporkan Siswa -->
-            <a
-              href="laporkan-siswa.html"
-              class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
-            >
-              <div class="flex items-center gap-3">
-                <i class="bi bi-exclamation-circle text-xl text-blue-500"></i>
-                <span class="font-medium">Laporkan Siswa</span>
-              </div>
-              <i class="bi bi-chevron-right text-gray-400"></i>
-            </a>
+            <!-- Textarea -->
+            <div>
+              <label
+                for="keterangan"
+                class="block text-sm font-medium text-gray-700 mb-1"
+                >Keterangan</label
+              >
+              <textarea
+                id="keterangan"
+                name="keterangan"
+                rows="4"
+                placeholder="Tulis keterangan tambahan..."
+                class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              ></textarea>
+            </div>
 
-            <!-- Riwayat Poin -->
-            <a
-              href="#"
-              class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
-            >
-              <div class="flex items-center gap-3">
-                <i class="bi bi-clock-history text-xl text-green-500"></i>
-                <span class="font-medium">Riwayat Poin</span>
-              </div>
-              <i class="bi bi-chevron-right text-gray-400"></i>
-            </a>
+            <!-- Input File -->
+            <div>
+              <label
+                for="bukti"
+                class="block text-sm font-medium text-gray-700 mb-1"
+                >Upload Bukti</label
+              >
+              <input
+                type="file"
+                id="bukti"
+                name="bukti"
+                class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-            <!-- Tukar Poin -->
-            <a
-              href="#"
-              class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
-            >
-              <div class="flex items-center gap-3">
-                <i class="bi bi-gift text-xl text-yellow-500"></i>
-                <span class="font-medium">Tukar Poin</span>
-              </div>
-              <i class="bi bi-chevron-right text-gray-400"></i>
-            </a>
-
-            <!-- Pengaturan -->
-            <a
-              href="#"
-              class="flex items-center justify-between bg-white p-4 rounded-lg shadow hover:bg-gray-50 transition"
-            >
-              <div class="flex items-center gap-3">
-                <i class="bi bi-gear text-xl text-gray-500"></i>
-                <span class="font-medium">Pengaturan</span>
-              </div>
-              <i class="bi bi-chevron-right text-gray-400"></i>
-            </a>
-          </div>
- 
+            <!-- Tombol -->
+            <div class="flex justify-between">
+              <a
+                href="saya.html"
+                class="bg-gray-300 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-400 transition text-sm"
+              >
+                Kembali
+              </a>
+              <a
+                href="saya.htmls"
+                class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm"
+              >
+                Laporkan
+              </a>
+            </div>
+          </form>
         </main>
 
         <!-- Sidebar kanan -->
